WIP: fixing image distortion

--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,7 @@ input {
 footer {
     display: flex;
     justify-content: center;
+    text-align: center;
 }
 
 @media only screen and (max-width: 1024px) {
@@ -120,6 +121,8 @@ footer {
 
     .small {
         display: block;
+        height: 100%;
+        width: 100%;
     }
     
     h1 {
